# api-auto-acv/controller/powerSources.js
@@ -11,19 +11,7 @@ exports.getPowerSources = async (req, res) => {
 
 exports.getPowerSourceById = async (req, res) => {
     try{
-        const powerSources = await powerSourcesService.getPowerSourceById(req.param.id_PowerSource);
-        if(!powerSources){
-            res.status(404).json({ error: "sourcé d'énergie non trouvée" });
-        }
-        res.status(201).json({success: true, powerSources});
-    } catch(error) {
-        res.status(500).json({ error: error.message });
-    }
-}
-
-exports.getPowerSourceByName = async (req, res) => {
-    try{
-        const powerSources = await powerSourcesService.getPowerSourceByName(req.param.powerSource_name);
+        const powerSources = await powerSourcesService.getPowerSourceById(req.params.id);
         if(!powerSources){
             res.status(404).json({ error: "source d'énergie non trouvée" });
         }
@@ -33,9 +21,23 @@ exports.getPowerSourceByName = async (req, res) => {
     }
 }
 
+
+exports.getPowerSourceByName = async (req, res) => {
+    console.log(req.params.name);  // Ajoutez cette ligne pour vérifier que le paramètre est bien reçu
+    try {
+        const powerSource = await powerSourcesService.getPowerSourceByName(req.params.name);
+        if (!powerSource) {
+            res.status(404).json({ error: "source d'énergie non trouvée" });
+        } else {
+            res.status(200).json({ success: true, powerSource });
+        }
+    } catch (error) {
+        res.status(500).json({ error: error.message });
+    }
+}
+
 exports.editPowerSources = async (req, res, next) => {
     const {powerSources, sources} = req.body;
-    console.log(powerSources);
     let thesePowerSources=[];
     for (let powerSourceKey in powerSources) {
         const powerSourceValue = powerSources[powerSourceKey];
