# api-auto-acv/routers/powerSources.js
@@ -5,7 +5,7 @@ router.get('', powerSourcesController.getPowerSources);
 //obtennir une source d'énergie à partir de son id
 router.get('/:id', powerSourcesController.getPowerSourceById);
 //obtennir une source d'énergie à partir de son nom
-router.get('/name=:name', powerSourcesController.getPowerSourceByName);
+router.get('/name/:name', powerSourcesController.getPowerSourceByName);
 //éditer des sources d'énergies
 router.patch('', powerSourcesController.editPowerSources);
 
